# ss25-nn-project

./: LICENSE  Makefile  README.md  TODO.md  docs.md  pyproject.toml  pyrightconfig.json  requirements.txt
experiments/: 1_BERT_pretrained.ipynb  comparison.ipynb  cross-encoder_pointwise_2025-09-28T21:39:54.pth  cross-encoder_pointwise_ranked_2025-09-28T21:39:54.txt  listwise.ipynb  pairwise.ipynb  pointwise.ipynb  pointwise_MS_MARCO.ipynb  pointwise_reranker.ipynb
report/: main.typ  sources.bib
results/: cross-encoder_pointwise_2025-09-28T09:15:59.pth  cross-encoder_pointwise_ranked_2025-09-26T16:10:42.txt  cross-encoder_pointwise_ranked_2025-09-28T09:15:59.txt
src/data/: __init__.py  itersplit.py  mmarco.py  msmarco.py
src/loss/: __init__.py  listnet.py
src/metrics/: __init__.py  metrics.py
src/models/: CrossEncoderBERT.py  CrossEncoderLongformer.py  _1_BERT_pertrained.py  __init__.py
src/utils/: stats.py  widgets.py
