[project]
name = "ss25-nn-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1", "ipywidgets>=8.1.7"]
